apache2 (2.2.16-2) UNRELEASED; urgency=low

  * If the init script's reload action is called immediately after the start
    action, wait a bit to allow apache2 to start and register its signal
    handlers. Closes: #589386, LP: #603192
  * Support 'graceful' as alias for 'reload' in the init script.
  * In README.Debian, suggest an Apache configuration change to get rid of the
    "Could not reliably determine the server's fully qualified domain name"
    warning, as alternative to changing DNS or /etc/hosts.  Closes: #590528
  * Bump Standards-Version (no changes).

 -- Stefan Fritsch <sf@debian.org>  Tue, 27 Jul 2010 20:58:40 +0200

apache2 (2.2.16-1) unstable; urgency=medium

  * Urgency medium for security fix.
  * New upstream release:
    - CVE-2010-1452: mod_dav, mod_cache: Fix denial of service vulnerability
      due to incorrect handling of requests without a path segment.
    - mod_dir: add FallbackResource directive, to enable admin to specify
      an action to happen when a URL maps to no file, without resorting
      to ErrorDocument or mod_rewrite
  * Fix mod_ssl header line corruption because of using memcpy for overlapping
    buffers. PR 45444. LP: #609290, #589611, #595116

 -- Stefan Fritsch <sf@debian.org>  Sat, 24 Jul 2010 22:18:43 +0200

apache2 (2.2.15-6) unstable; urgency=low

  * Fix init script not correctly killing htcacheclean. Closes: #580971
  * Add a separate entry in README.Debian about the need to use apache2ctl
    for starting instead of calling apache2 directly. Closes: #580445
  * Fix debug info to allow gdb loading it automatically. Closes: #581514
  * Fix install target in Makefile created by apxs2 -n. Closes: #588787
  * Fix ab sending more requests than specified by the -n parameter.
    Closes: #541158
  * Add apache2 monit configuration to apache2.2-commons examples dir.
    Closes: #583127
  * Build as PIE, since gdb in squeeze now supports it.